# llvm-normalizer

./: CMakeLists.txt  README.md
include/: ElimAllocaStoreLoad.h  ElimUnusedGlobal.h  UnwrapGEP.h
lib/backward/: README.md
lib/cxxopts/: README.md
src/: CMakeLists.txt  CombineBr.cpp  CombineBr.h  CombineGEP.cpp  CombineGEP.h  Common.cpp  Common.h  Debug.cpp  Debug.h  Discover.cpp  Discover.h  ElimAllocaStoreLoad.cpp  ElimAllocaStoreLoad.h  ElimCommonGEP.cpp  ElimCommonGEP.h  ElimCommonInstruction.cpp  ElimCommonInstruction.h  ElimCommonPHI.cpp  ElimCommonPHI.h  ElimIdenticalInstrs.cpp  ElimIdenticalInstrs.h  ElimStoreLoadAlloca.cpp  ElimStoreLoadAlloca.h  ElimUnusedAuxFunction.cpp  ElimUnusedAuxFunction.h  ElimUnusedGlobal.cpp  ElimUnusedGlobal.h  InitGlobal.cpp  InitGlobal.h  InlineComplFunction.cpp  InlineComplFunction.h  InlineDerefFunction.cpp  InlineDerefFunction.h  InlineFunction.cpp  InlineFunction.h  InlineInternalFunction.cpp  InlineInternalFunction.h  InlineSimpleFunction.cpp  InlineSimpleFunction.h  NormalizeConstExpr.cpp  (+13 more)
src/cxxopts/: CMakeLists.txt
